--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <drools.version>6.2.0.CR2</drools.version>
-        <jbpm.version>5.5.0.Final</jbpm.version>
+        <drools.version>6.2.0.CR3</drools.version>
+        <jbpm.version>6.1.0.Final</jbpm.version>
         <powermock.version>1.4.12</powermock.version>
         <jackson.version>2.3.1</jackson.version>
         <guvnor.version>5.6.1.chtijbug-SNAPSHOT</guvnor.version>
@@ -56,7 +56,7 @@
         <module>drools-framework-common</module>
         <module>drools-framework-runtime-base</module>
         <module>drools-framework-runtime-entity</module>
-        <module>drools-framework-rest-guvnor</module>
+        <!--module>drools-framework-rest-guvnor</module-->
         <module>drools-service-runner-archetype</module>
         <module>maven-guvnor-install-pojo-plugin</module>
         <module>drools-runner-generator</module>
@@ -70,15 +70,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.4.1</version>
+                <version>2.4.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -159,8 +159,8 @@
                 <version>${drools.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.drools</groupId>
-                <artifactId>knowledge-api</artifactId>
+                <groupId>org.kie</groupId>
+                <artifactId>kie-api</artifactId>
                 <version>${drools.version}</version>
             </dependency>
             <dependency>
