--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/webapp/WEB-INF/web.xml
@@ -589,7 +589,7 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>console</web-resource-name>
-      <url-pattern>/kie-wb.html</url-pattern>
+      <url-pattern>/kie-drools-wb.html</url-pattern>
       <url-pattern>*.erraiBus</url-pattern>
       <url-pattern>/org.kie.workbench.KIEWebapp/*</url-pattern>
       <url-pattern>/resourceList</url-pattern>
