--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <version>${kie.wb.version}</version>
         <version.org.mortbay.jetty>6.1.25</version.org.mortbay.jetty>
         <version.org.jboss.resteasy>2.3.7.Final</version.org.jboss.resteasy>
-        <version.org.jboss.weld.weld>1.1.23.Final</version.org.jboss.weld.weld>
+        <version.org.jboss.weld.weld>1.1.25.Final</version.org.jboss.weld.weld>
         <version.com.github.gwtbootstrap>2.2.1.0</version.com.github.gwtbootstrap>
         <version.org.owasp.encoder>1.1</version.org.owasp.encoder>
         <version.org.osgi>4.3.1</version.org.osgi>
@@ -40,7 +40,6 @@
         <version.org.codehaus.btm>2.1.4</version.org.codehaus.btm>
         <version.org.apache.lucene>4.1.0</version.org.apache.lucene>
         <version.org.apache.cxf>2.7.10</version.org.apache.cxf>
-
 
 
 
@@ -129,10 +128,9 @@
         <module>drools-framework-runtime-base</module>
         <module>drools-framework-runtime-entity</module>
         <module>drools-framework-rest-guvnor</module>
-        <module>drools-service-runner-archetype</module>
-        <module>maven-guvnor-install-pojo-plugin</module>
-        <module>drools-runner-generator</module>
-        <module>drools-framework-kie-wb-parent</module>
+        <!--module>drools-service-runner-archetype</module-->
+        <!--module>maven-guvnor-install-pojo-plugin</module-->
+        <!--module>drools-runner-generator</module-->
     </modules>
 
 
