--- a/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-client/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-client/pom.xml
@@ -35,7 +35,7 @@
     </dependencies>
 
 
-    <build>
+    <!--build>
         <plugins>
 
             <plugin>
@@ -59,7 +59,7 @@
         </plugins>
 
 
-    </build>
+    </build-->
 
 
 </project>
