--- a/drools-framework-runtime-base/pom.xml
+++ b/drools-framework-runtime-base/pom.xml
@@ -92,7 +92,10 @@
             <groupId>org.chtijbug.drools</groupId>
             <artifactId>drools-framework-runtime-entity</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.chtijbug.drools</groupId>
+            <artifactId>drools-framework-common</artifactId>
+        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
