--- a/drools-runner-generator/pom.xml
+++ b/drools-runner-generator/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.chtijbug.drools</groupId>
         <artifactId>drools-framework-parent</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <version>1.5.1</version>
     </parent>
 
     <artifactId>drools-runner-generator</artifactId>
