--- a/drools-framework-runtime-entity/pom.xml
+++ b/drools-framework-runtime-entity/pom.xml
@@ -72,6 +72,10 @@
     </dependency>
 
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.chtijbug.drools</groupId>
       <artifactId>drools-framework-common</artifactId>
       <scope>test</scope>
@@ -81,6 +85,13 @@
       <artifactId>commons-io</artifactId>
       <version>1.3.2</version>
       <scope>test</scope>
+    </dependency>
+
+
+    <!-- databinding; ObjectMapper, JsonNode and related classes are here -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
     </dependency>
 
 
