--- a/drools-framework-kie-wb-parent/drools-framework-kie-wb-wars/pom.xml
+++ b/drools-framework-kie-wb-parent/drools-framework-kie-wb-wars/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,9 @@
 
     <artifactId>drools-framework-kie-wb-wars</artifactId>
     <packaging>pom</packaging>
-
+    <properties>
+        <webapp.war>org.chtijbug.drools:kie-drools-framework-wb-webapp:war</webapp.war>
+    </properties>
     <name>KIE Drools Platform Workbench For Tomcat 7</name>
 
     <dependencies>
