--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         version="2.5">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.0"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
+  <!--
   <distributable/>
+  -->
+  <listener>
+    <listener-class>org.uberfire.backend.server.io.DisposableShutdownService</listener-class>
+  </listener>
 
-  <listener>
-    <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
-  </listener>
-  <listener>
-    <listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
-  </listener>
+  <servlet-mapping>
+    <servlet-name>javax.ws.rs.core.Application</servlet-name>
+    <url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
+
+  <context-param>
+    <param-name>resteasy.role.based.security</param-name>
+    <param-value>true</param-value>
+  </context-param>
 
   <filter>
     <filter-name>request-capture</filter-name>
@@ -21,6 +28,36 @@
   <filter-mapping>
     <filter-name>request-capture</filter-name>
     <url-pattern>*</url-pattern>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>Avoid Host Page Cache</filter-name>
+    <filter-class>org.uberfire.ext.security.server.CacheHeadersFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>Avoid Host Page Cache</filter-name>
+    <url-pattern>/kie-wb.html</url-pattern>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>Host Page Patch</filter-name>
+    <filter-class>org.jboss.errai.security.server.servlet.UserHostPageFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>Host Page Patch</filter-name>
+    <url-pattern>/kie-wb.html</url-pattern>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>GWT Locale Filter</filter-name>
+    <filter-class>org.uberfire.server.locale.GWTLocaleHeaderFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>GWT Locale Filter</filter-name>
+    <url-pattern>/kie-wb.html</url-pattern>
   </filter-mapping>
 
   <filter>
@@ -45,6 +82,24 @@
     <url-pattern>*</url-pattern>
   </filter-mapping>
 
+  <servlet>
+    <servlet-name>LoginRedirectServlet</servlet-name>
+    <servlet-class>org.uberfire.ext.security.server.LoginRedirectServlet</servlet-class>
+    <init-param>
+      <param-name>display-after-login</param-name>
+      <param-value>/kie-wb.html</param-value>
+    </init-param>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LoginRedirectServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+
   <!-- Basic Auth Filter for REST and Maven2 repo -->
   <filter>
     <filter-name>HTTP Basic Auth Filter</filter-name>
@@ -59,83 +114,8 @@
     <filter-name>HTTP Basic Auth Filter</filter-name>
     <url-pattern>/rest/*</url-pattern>
     <url-pattern>/maven2/*</url-pattern>
+    <url-pattern>/ws/*</url-pattern>
   </filter-mapping>
-
-  <!-- RESTEasy configurations -->
-  <context-param>
-    <param-name>resteasy.scan</param-name>
-    <param-value>true</param-value>
-  </context-param>
-
-  <context-param>
-    <param-name>resteasy.servlet.mapping.prefix</param-name>
-    <param-value>/rest</param-value>
-  </context-param>
-
-  <!-- Note, this configuration needs to be removed with AS7 deployement -->
-  <context-param>
-    <param-name>resteasy.injector.factory</param-name>
-    <param-value>org.jboss.resteasy.cdi.CdiInjectorFactory</param-value>
-  </context-param>
-
-  <servlet>
-    <servlet-name>Resteasy</servlet-name>
-    <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>Resteasy</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
-  </servlet-mapping>
-
-  <!-- UberFire servlets -->
-  <servlet>
-    <servlet-name>UberfireFileUploadServlet</servlet-name>
-    <servlet-class>org.uberfire.server.FileUploadServlet</servlet-class>
-    <init-param>
-      <param-name>includes-path</param-name>
-      <param-value>git://**,default://**</param-value>
-    </init-param>
-    <init-param>
-      <param-name>excludes-path</param-name>
-      <param-value>file://**</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UberfireFileUploadServlet</servlet-name>
-    <url-pattern>/org.kie.workbench.KIEWebapp/defaulteditor/upload/*</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
-    <servlet-name>UberfireFileDownloadServlet</servlet-name>
-    <servlet-class>org.uberfire.server.FileDownloadServlet</servlet-class>
-    <init-param>
-      <param-name>includes-path</param-name>
-      <param-value>git://**,default://**</param-value>
-    </init-param>
-    <init-param>
-      <param-name>excludes-path</param-name>
-      <param-value>file://**</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UberfireFileDownloadServlet</servlet-name>
-    <url-pattern>/org.kie.workbench.KIEWebapp/defaulteditor/download/*</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
-    <servlet-name>PluginMediaServlet</servlet-name>
-    <servlet-class>org.uberfire.ext.plugin.backend.PluginMediaServlet</servlet-class>
-    <init-param>
-      <param-name>url-pattern</param-name>
-      <param-value>/plugins/</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>PluginMediaServlet</servlet-name>
-    <url-pattern>/plugins/*</url-pattern>
-  </servlet-mapping>
 
   <!-- drools-wb servlets -->
   <servlet>
@@ -190,8 +170,8 @@
   </servlet-mapping>
 
   <servlet>
-    <servlet-name>M2Servlet</servlet-name>
-    <servlet-class>org.guvnor.m2repo.backend.server.M2Servlet</servlet-class>
+    <servlet-name>UberfireFileUploadServlet</servlet-name>
+    <servlet-class>org.uberfire.server.FileUploadServlet</servlet-class>
     <init-param>
       <param-name>includes-path</param-name>
       <param-value>git://**,default://**</param-value>
@@ -202,8 +182,49 @@
     </init-param>
   </servlet>
   <servlet-mapping>
+    <servlet-name>UberfireFileUploadServlet</servlet-name>
+    <url-pattern>/org.kie.workbench.KIEWebapp/defaulteditor/upload/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>UberfireFileDownloadServlet</servlet-name>
+    <servlet-class>org.uberfire.server.FileDownloadServlet</servlet-class>
+    <init-param>
+      <param-name>includes-path</param-name>
+      <param-value>git://**,default://**</param-value>
+    </init-param>
+    <init-param>
+      <param-name>excludes-path</param-name>
+      <param-value>file://**</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UberfireFileDownloadServlet</servlet-name>
+    <url-pattern>/org.kie.workbench.KIEWebapp/defaulteditor/download/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>M2Servlet</servlet-name>
+    <servlet-class>org.guvnor.m2repo.backend.server.M2Servlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>M2Servlet</servlet-name>
+    <url-pattern>/maven2wb/*</url-pattern>
     <url-pattern>/maven2/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>PluginMediaServlet</servlet-name>
+    <servlet-class>org.uberfire.ext.plugin.backend.PluginMediaServlet</servlet-class>
+    <init-param>
+      <param-name>url-pattern</param-name>
+      <param-value>/plugins/</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PluginMediaServlet</servlet-name>
+    <url-pattern>/plugins/*</url-pattern>
   </servlet-mapping>
 
   <!-- Errai servlets -->
@@ -222,32 +243,8 @@ profile in pom.xml to use that. -->
     <url-pattern>*.erraiBus</url-pattern>
   </servlet-mapping>
 
-  <resource-env-ref>
-    <description>Object factory for the CDI Bean Manager</description>
-    <resource-env-ref-name>BeanManager</resource-env-ref-name>
-    <resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
-  </resource-env-ref>
-
-  <resource-env-ref>
-    <description>Object factory for the Errai Service</description>
-    <resource-env-ref-name>ErraiService</resource-env-ref-name>
-    <resource-env-ref-type>org.jboss.errai.bus.server.service.ErraiService</resource-env-ref-type>
-  </resource-env-ref>
-
-  <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
-  </welcome-file-list>
-
   <!-- Designer -->
   <!-- Designer Injection Filter -->
-  <filter>
-    <filter-name>Designer Injection Filter</filter-name>
-    <filter-class>org.jbpm.designer.filter.DesignerInjectionFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>Designer Injection Filter</filter-name>
-    <url-pattern>*.html</url-pattern>
-  </filter-mapping>
   <filter>
     <filter-name>Redirect Filter</filter-name>
     <filter-class>org.jbpm.designer.filter.DesignerResourcesRedirectFilter</filter-class>
@@ -259,14 +256,6 @@ profile in pom.xml to use that. -->
   <filter-mapping>
     <filter-name>Redirect Filter</filter-name>
     <url-pattern>/org.jbpm.designer.jBPMDesigner/*</url-pattern>
-  </filter-mapping>
-  <filter>
-    <filter-name>Pluggable Filter</filter-name>
-    <filter-class>org.jbpm.designer.web.filter.impl.PluggableFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>Pluggable Filter</filter-name>
-    <url-pattern>/*</url-pattern>
   </filter-mapping>
   <servlet>
     <display-name>Resource List</display-name>
@@ -548,12 +537,7 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
   <servlet>
     <servlet-name>Controller</servlet-name>
     <servlet-class>org.jbpm.formModeler.service.bb.mvc.controller.ControllerServlet</servlet-class>
-    <init-param>
-      <param-name>base.app.dir</param-name>
-      <param-value>${project.basedir}/target/${project.name}-${project.version}</param-value>
-    </init-param>
   </servlet>
-
 
   <servlet-mapping>
     <servlet-name>Controller</servlet-name>
@@ -561,15 +545,7 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
   </servlet-mapping>
   <!-- end form-modeler-->
 
-  <resource-ref>
-    <description>Console DS</description>
-    <res-ref-name>jdbc/jbpmConsoleDS</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
-
-  <!-- Container based security -->
-
+  <!-- security settings -->
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>download</web-resource-name>
@@ -589,9 +565,9 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>console</web-resource-name>
-      <url-pattern>/kie-drools-wb.html</url-pattern>
-      <url-pattern>*.erraiBus</url-pattern>
+      <url-pattern>/kie-wb.html</url-pattern>
       <url-pattern>/org.kie.workbench.KIEWebapp/*</url-pattern>
+      <url-pattern>*.erraiBus</url-pattern>
       <url-pattern>/resourceList</url-pattern>
       <url-pattern>/editor</url-pattern>
       <url-pattern>/editor/*</url-pattern>
@@ -619,6 +595,7 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
       <url-pattern>/plugin/*</url-pattern>
       <url-pattern>/stencilset/*</url-pattern>
       <url-pattern>/plugins/*</url-pattern>
+      <url-pattern>/maven2wb/*</url-pattern>
     </web-resource-collection>
     <auth-constraint>
       <role-name>admin</role-name>
@@ -650,11 +627,6 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
       <form-error-page>/login.jsp?message=Login failed: Invalid UserName or Password</form-error-page>
     </form-login-config>
   </login-config>
-
-  <error-page>
-    <error-code>403</error-code>
-    <location>/not_authorized.jsp</location>
-  </error-page>
 
   <security-role>
     <description>Administrator - Administrates the BPMS system. Has full access
@@ -697,4 +669,34 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
     <role-name>manager</role-name>
   </security-role>
 
+  <error-page>
+    <error-code>403</error-code>
+    <location>/not_authorized.jsp</location>
+  </error-page>
+
+  <context-param>
+    <param-name>resteasy.document.expand.entity.references</param-name>
+    <param-value>false</param-value>
+  </context-param>
+
+  <filter>
+    <filter-name>Dynamic JAXBContext Filter</filter-name>
+    <filter-class>org.kie.remote.services.rest.jaxb.DynamicJaxbContextFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>Dynamic JAXBContext Filter</filter-name>
+    <url-pattern>/rest/*</url-pattern>
+    <url-pattern>/ws/*</url-pattern>
+  </filter-mapping>
+
+  <!-- web services -->
+  <servlet>
+    <servlet-name>CommandWebService</servlet-name>
+    <servlet-class>org.kie.remote.services.ws.command.CommandWebServiceImpl</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>CommandWebService</servlet-name>
+    <url-pattern>/ws/CommandService</url-pattern>
+  </servlet-mapping>
 </web-app>
