--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.chtijbug.drools</groupId>
@@ -15,19 +15,19 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <drools.version>6.2.0.CR4</drools.version>
-        <jbpm.version>6.2.0.CR4</jbpm.version>
+        <drools.version>6.3.0.CR2</drools.version>
+        <jbpm.version>6.3.0.CR2</jbpm.version>
         <powermock.version>1.4.12</powermock.version>
-        <jackson.version>2.3.1</jackson.version>
-        <guvnor.version>6.2.0.CR4</guvnor.version>
-        <kie.wb.version>6.2.0.CR4</kie.wb.version>
-        <version.org.uberfire>0.5.0.CR10</version.org.uberfire>
-        <version.org.jboss.errai>3.0.4.Final</version.org.jboss.errai>
-        <version.com.google.gwt>2.5.1</version.com.google.gwt>
+        <jackson.version>2.4.0</jackson.version>
+        <guvnor.version>6.3.0.CR2</guvnor.version>
+        <kie.wb.version>6.3.0.CR2</kie.wb.version>
+        <version.org.uberfire>0.7.0.CR3</version.org.uberfire>
+        <version.org.jboss.errai>3.2.0.Final</version.org.jboss.errai>
+        <version.com.google.gwt>2.7.0</version.com.google.gwt>
         <version>${kie.wb.version}</version>
         <version.org.mortbay.jetty>6.1.25</version.org.mortbay.jetty>
-        <version.org.jboss.resteasy>2.3.7.Final</version.org.jboss.resteasy>
-        <version.org.jboss.weld.weld>1.1.25.Final</version.org.jboss.weld.weld>
+        <version.org.jboss.resteasy>2.3.10.Final</version.org.jboss.resteasy>
+        <version.org.jboss.weld.weld>1.1.30.Final</version.org.jboss.weld.weld>
         <version.com.github.gwtbootstrap>2.2.1.0</version.com.github.gwtbootstrap>
         <version.org.owasp.encoder>1.1</version.org.owasp.encoder>
         <version.org.osgi>4.3.1</version.org.osgi>
@@ -136,11 +136,81 @@
 
 
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.3.1</version>
+                <executions>
+                    <execution>
+                        <id>enforce-plugin-versions</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requirePluginVersions>
+                                    <unCheckedPluginList>org.kie:kie-maven-plugin</unCheckedPluginList>
+                                </requirePluginVersions>
+                            </rules>
+                        </configuration>
+                    </execution>
+
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <retryFailedDeploymentCount>10</retryFailedDeploymentCount>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.3.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
                 <version>3.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.4.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -1294,6 +1364,7 @@
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 
