--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/pom.xml
@@ -1637,11 +1637,9 @@
                     <configuration>
                         <deploy>${project.build.directory}/gwt-symbols-deploy</deploy>
                         <localWorkers>${gwt.compiler.localWorkers}</localWorkers>
-                        <extraJvmArgs>${gwt.memory.settings} -XX:CompileThreshold=7000
-                            -Derrai.jboss.home=${errai.jboss.home}
+                        <extraJvmArgs>${gwt.memory.settings} -XX:CompileThreshold=7000 -Derrai.jboss.home=${errai.jboss.home}
                             -Derrai.marshalling.server.classOutput=${project.build.outputDirectory} -Dorg.kie.demo=true
-                            -Dorg.kie.clean.onstartup=true -Dorg.uberfire.nio.git.ssh.enabled=false
-                            -Djava.util.prefs.syncInterval=2000000
+                            -Dorg.kie.clean.onstartup=true -Dorg.uberfire.nio.git.ssh.enabled=false -Djava.util.prefs.syncInterval=2000000
                         </extraJvmArgs>
                         <draftCompile>true</draftCompile>
                         <module>org.kie.workbench.FastCompiledKIEWebapp</module>
@@ -1904,10 +1902,8 @@
                             </compileSourcesArtifact>
                             <compileSourcesArtifact>org.kie.workbench.screens:kie-wb-common-home-client
                             </compileSourcesArtifact>
-                            <compileSourcesArtifact>org.chtijbug.drools:kie-drools-framework-rest-backend
-                            </compileSourcesArtifact>
-                            <compileSourcesArtifact>org.chtijbug.drools:kie-drools-framework-rest-client
-                            </compileSourcesArtifact>
+                            <compileSourcesArtifact>org.chtijbug.drools:kie-drools-framework-rest-backend</compileSourcesArtifact>
+                            <compileSourcesArtifact>org.chtijbug.drools:kie-drools-framework-rest-client</compileSourcesArtifact>
 
                         </compileSourcesArtifacts>
 
