--- a/drools-framework-runtime-base/pom.xml
+++ b/drools-framework-runtime-base/pom.xml
@@ -116,6 +116,10 @@
       <artifactId>drools-compiler</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.drools</groupId>
+      <artifactId>knowledge-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.jdt.core.compiler</groupId>
       <artifactId>ecj</artifactId>
     </dependency>
@@ -125,6 +129,10 @@
       <artifactId>jbpm-bpmn2</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.chtijbug.drools</groupId>
+      <artifactId>drools-framework-runtime-entity</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.chtijbug.drools</groupId>
       <artifactId>drools-framework-runtime-entity</artifactId>
