--- a/drools-framework-common/pom.xml
+++ b/drools-framework-common/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.chtijbug.drools</groupId>
     <artifactId>drools-framework-parent</artifactId>
-    <version>1.5.2-SNAPSHOT</version>
+    <version>1.5.2</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
